syntax = "proto3";

option go_package = ".;config";
package config;

message Status {
  int32 code = 1;
  string info = 2;
}

message ClientInfo{
  string jobId = 1;
  string role = 2;
}
message RankTableStream {
  string jobId = 1;
  string rankTable = 2;
}

service Config {
  rpc Register(ClientInfo) returns (Status) {}
  rpc SubscribeRankTable(ClientInfo) returns (stream RankTableStream) {}
}